--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<title>Document</title>
 </head> 
 <body>
-	<h1 class="center">David Vento</h1>
+	<h1 class="center">Cecilia Rojas</h1>
 	<div class="container">
 		asdsa
 	</div>
