--- a/index.html
+++ b/index.html
@@ -15,12 +15,38 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="manifest" href="manifest.json">
-	<title>Document</title>
+	<title>Mar'ce Rojas</title>
 </head> 
 <body>
 	<h1 class="center">Cecilia Rojas</h1>
 	<div class="container">
-		asdsa
+		<div class="row">
+			<div class="col-sm">
+				<figure class="figure">
+				  <img src="image/icon_1024.png" class="figure-img img-fluid rounded" alt="...">
+				  <figcaption class="figure-caption text-left">La primera cita.</figcaption>
+				</figure>
+			</div>
+			<div class="col-sm">
+				<img src="image/icon_1024.png" class="img-fluid">
+			</div>
+			<div class="col-sm">
+				<img src="image/icon_1024.png" class="img-fluid">
+			</div>
+		</div><br>
+			<div class="row">
+				<div class="col-sm">
+					<img src="image/icon_1024.png" class="img-fluid">
+				</div>
+				<div class="col-sm">
+					<img src="image/icon_1024.png" class="img-fluid">
+				</div>
+				<div class="col-sm">
+					<img src="image/icon_1024.png" class="img-fluid">
+				</div>
+			</div>
+		
+		
 	</div>
 	<script src="script.js"></script>
 </body>
