--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
 	<title>Mar'ce Rojas</title>
 </head> 
 <body>
-	<h1 class="center">Cecilia Rojas</h1>
-	<div class="container">
-		<div class="row">
+	<h1 class="text-center">Cecilia Rojas</h1>
+	<!-- <div class="container">
+		<div class=" row">
 			<div class="col-sm">
-				<figure class="figure">
-				  <img src="image/icon_1024.png" class="figure-img img-fluid rounded" alt="...">
-				  <figcaption class="figure-caption text-left">La primera cita.</figcaption>
-				</figure>
+				<div class="card">
+				  <img src="image/2.jpg" style="" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <p class="card-text">El primer sticker que me regalaste el dia que me inivtaste a comer pizza.</p>
+				  </div>
+				</div>
 			</div>
 			<div class="col-sm">
-				<img src="image/icon_1024.png" class="img-fluid">
+				<div class="card">
+				  <img src="image/5.jpg" style="" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <p class="card-text">El primer sticker que me regalaste el dia que me inivtaste a comer pizza.</p>
+				  </div>
+				</div>
 			</div>
 			<div class="col-sm">
 				<img src="image/icon_1024.png" class="img-fluid">
@@ -47,7 +54,7 @@
 			</div>
 		
 		
-	</div>
+	</div> -->
 	<script src="script.js"></script>
 </body>
 </html>
