--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
  	<link rel="shortcut icon" type="image/png" href="./image/icon_128.png">
  	<link rel="apple-touch-icon" href="./image/icon_512.png">
- 	<link rel="apple-touch-startup-image" href="./image/icon_512.png">
-	<link rel="stylesheet" type="text/css" href="style.css">
+ 	<link rel="apple-touch-startup-image" href="./image/logomarce.png.png">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="manifest" href="manifest.json">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Mar'ce Rojas</title>
 </head> 
 <body>
@@ -25,7 +25,7 @@
 				<div class="card">
 				  <img src="image/2.jpg" style="" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <p class="card-text">El primer sticker que me regalaste el dia que me inivtaste a comer pizza.</p>
+				    <p class="card-text">El primer sticker que me regalaste el dia que me invitaste a comer pizza.</p>
 				  </div>
 				</div>
 			</div>
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 			<div class="col-sm">
-				<img src="image/icon_1024.png" class="img-fluid">
+				<img src="image/icon_1024.png" class="img-fluid"> 
 			</div>
 		</div><br>
 			<div class="row">
@@ -52,9 +52,9 @@
 					<img src="image/icon_1024.png" class="img-fluid">
 				</div>
 			</div>
-		
-		
-	</div> -->
+		 -->
+		 
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
