--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
  	<link rel="shortcut icon" type="image/png" href="./image/icon_128.png">
  	<link rel="apple-touch-icon" href="./image/icon_512.png">
- 	<link rel="apple-touch-startup-image" href="./image/logomarce.png.png">
+ 	<link rel="apple-touch-startup-image" href="./image/logomarce.png">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" type="text/css" href="style.css">
