--- a/index.html
+++ b/index.html
@@ -14,13 +14,36 @@
  	<link rel="apple-touch-startup-image" href="./image/logomarce.png">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="manifest" href="manifest.json">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 	<title>Mar'ce Rojas</title>
 </head> 
 <body>
-	<h1 class="text-center">Cecilia Rojas</h1>
-	<!-- <div class="container">
-		<div class=" row">
+	<!-- <h1 class="text-center">Cecilia Rojas</h1> -->
+	<div class="container-fluid">
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"><img src="image/logomarce.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">...</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">...</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      ...
+    </span>
+  </div>
+</nav>
+		<!-- <div class=" row">
 			<div class="col-sm">
 				<div class="card">
 				  <img src="image/2.jpg" style="" class="card-img-top" alt="...">
@@ -51,10 +74,12 @@
 				<div class="col-sm">
 					<img src="image/icon_1024.png" class="img-fluid">
 				</div>
-			</div>
-		 -->
+			</div> -->
+		
 		 
 	</div>
 	<script src="script.js"></script>
+	<script src="jquery-3.4.1.min.js"></script>
+	<script src="bootstrap.js"></script>
 </body>
 </html>
