--- a/index.html
+++ b/index.html
@@ -43,39 +43,16 @@
     </span>
   </div>
 </nav>
-		<!-- <div class=" row">
+		<div class=" row">
 			<div class="col-sm">
 				<div class="card">
-				  <img src="image/2.jpg" style="" class="card-img-top" alt="...">
+				  <img src="image/5.jpg"" style="" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <p class="card-text">El primer sticker que me regalaste el dia que me invitaste a comer pizza.</p>
+				    <p class="card-text">El día que fuimos a comer sopa Ramen en "Tokio Ramen", nos quedamos hasta casi las 3 viendo IP MAN.</p>
 				  </div>
 				</div>
-			</div>
-			<div class="col-sm">
-				<div class="card">
-				  <img src="image/5.jpg" style="" class="card-img-top" alt="...">
-				  <div class="card-body">
-				    <p class="card-text">El primer sticker que me regalaste el dia que me inivtaste a comer pizza.</p>
-				  </div>
-				</div>
-			</div>
-			<div class="col-sm">
-				<img src="image/icon_1024.png" class="img-fluid"> 
 			</div>
 		</div><br>
-			<div class="row">
-				<div class="col-sm">
-					<img src="image/icon_1024.png" class="img-fluid">
-				</div>
-				<div class="col-sm">
-					<img src="image/icon_1024.png" class="img-fluid">
-				</div>
-				<div class="col-sm">
-					<img src="image/icon_1024.png" class="img-fluid">
-				</div>
-			</div> -->
-		
 		 
 	</div>
 	<script src="script.js"></script>
