--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="card">
 				  <img src="image/5.jpg"" style="" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <p class="card-text">El día que fuimos a comer sopa Ramen en "Tokio Ramen", nos quedamos hasta casi las 3 viendo IP MAN.</p>
+				    <p class="card-text">El día que fuimos a comer sopa Ramen en "Tokio Ramen", nos quedamos hasta casi las 3 am viendo IP MAN.</p>
 				  </div>
 				</div>
 			</div>
