--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="card">
 				  <img src="image/5.jpg" style="" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <p class="card-text">Ese día fuimos en la noche a comer sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo IP MAN.</p>
+				    <p class="card-text">Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
 				  </div>
 				</div>
 			</div>
