--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class=" row">
 			<div class="col-sm">
 				<div class="card">
-				  <img src="image/5.jpg" style="" class="card-img-top" alt="...">
+				  <img src="image/5.jpg" style="" class="card-img-top" alt="Cecilia Tokio Ramen">
 				  <div class="card-body">
 				    <p class="card-text">Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
 				  </div>
