--- a/kimetsu.html
+++ b/kimetsu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta name="description" content="Bienvenidos a la pagina de David Vento">
+	<meta name="description" content="Manga de kimetsu no yaiba">
 	<meta name="theme-color" content="white">
   	<meta name="MobileOptimized" content="width">
   	<meta name="HandheldFriendly" content="true">
@@ -13,12 +13,11 @@
  	<link rel="apple-touch-icon" href="./image/icon_512.png">
  	<link rel="apple-touch-startup-image" href="./image/logomarce.png">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<link rel="manifest" href="manifest.json">
-	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-	<title>Mar'ce Rojas</title>
-</head> 
+	<!-- <link rel="manifest" href="manifest.json">
+ -->	<title>Kimetsu No Yaiba</title>
+</head>
 <body>
-	<!-- <h1 class="text-center">Cecilia Rojas</h1> -->
+		<!-- <h1 class="text-center">Cecilia Rojas</h1> -->
 	<div class="container-fluid">
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,28 +33,14 @@
       <li class="nav-item">
         <a class="nav-link" href="kimetsu.html">Kimetsu no Yaiba</a>
       </li>
+
     </ul>
     <span class="navbar-text">
-      Cecilia Rojas
+      Manga de Kimetsu no Yaiba
     </span>
   </div>
 </nav>
-<div class="row">
-	<div class="col-sm">
-		<img src="image/erizo.jpg" class="img-fluid">
-	</div>
-</div><br>
-		<div class=" row">
-			<div class="col-sm">
-				<div class="card">
-				  <img src="image/5.jpg" style="" class="card-img-top" alt="Cecilia Tokio Ramen">
-				  <div class="card-body">
-				    <p class="card-text">Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
-				  </div>
-				</div>
-			</div>
-		</div><br>
-		 
+<iframe style="width: 100vw; height: 100vh;" src="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba"></iframe>
 	</div>
 	<script src="script.js"></script>
 	<script src="jquery-3.4.1.min.js"></script>
