--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta name="description" content="Bienvenidos a la pagina de David Vento">
 	<meta name="theme-color" content="white">
@@ -12,35 +13,30 @@
  	<link rel="shortcut icon" type="image/png" href="./image/icon_128.png">
  	<link rel="apple-touch-icon" href="./image/icon_512.png">
  	<link rel="apple-touch-startup-image" href="./image/logomarce.png">
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="materialize.css">
 	<link rel="manifest" href="manifest.json">
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 	<title>Mar'ce Rojas</title>
 </head> 
 <body>
-	<!-- <h1 class="text-center">Cecilia Rojas</h1> -->
-	<div class="container-fluid">
+	<!-- inicio navbar -->
+	 <nav>
+    <div class="nav-wrapper white">
+      <a href="#!" class="brand-logo"><img src="image/marcelogo.png" style="width: 100px;" class="responsive-img"></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="index.html" class="black-text">Home</a></li>
+        <li><a href="kimetsu.html" class="black-text">Kimetsu no Yaiba</a></li>
+      </ul>
+    </div>
+  </nav>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="image/marcelogo.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="kimetsu.html">Kimetsu no Yaiba</a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Cecilia Rojas
-    </span>
-  </div>
-</nav>
-<div class="row">
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="kimetsu.html">Kimetsu no Yaiba</a></li>
+  </ul>
+  <!-- fin del navbar -->
+<!-- <div class="row">
 	<div class="col-sm">
 		<img src="image/erizo.jpg" class="img-fluid">
 	</div>
@@ -56,9 +52,62 @@
 			</div>
 		</div><br>
 		 
+	</div> -->
+	<div class="row">
+	<div class="col s10 offset-s1">
+		<div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/erizo.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Erizo<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Erizo<i class="material-icons right">close</i></span>
+      <p>Uno de roedores que tanto te gusta.</p>
+    </div>
+  </div>
 	</div>
+</div>	
+<div class="row">
+	<div class="col s10 offset-s1">
+		<div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/5.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Tokio Ramen<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Tokio Ramen<i class="material-icons right">close</i></span>
+      <p>Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
+    </div>
+  </div>
+	</div>
+</div>	
+<div class="row">
+	<div class="col s10 offset-s1">
+		<div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/2.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Sticker<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Sticker<i class="material-icons right">close</i></span>
+      <p>El día 26 de noviembre me invitaste a comer una pizza en "pizza hot" y me regalaste un sticker que lo pegué en mi laptop, muchas gracias, fue el mejor regalo que recibí en todo el 2019. -Dvento</p>
+    </div>
+  </div>
+	</div>
+</div>	
 	<script src="script.js"></script>
 	<script src="jquery-3.4.1.min.js"></script>
-	<script src="bootstrap.js"></script>
+	<script src="materialize.js"></script>
+	<script>
+		$(document).ready(function(){
+		    $('.sidenav').sidenav();
+		});
+	</script>
 </body>
 </html>
