--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Sticker<i class="material-icons right">close</i></span>
-      <p>El día 26 de noviembre me invitaste a comer una pizza en "pizza hot" y me regalaste un sticker que lo pegué en mi laptop, muchas gracias, fue el mejor regalo que recibí en todo el 2019. -Dvento</p>
+      <p>El día 26 de noviembre me invitaste a comer una pizza en "pizza hut" y me regalaste un sticker que lo pegué en mi laptop, muchas gracias, fue el mejor regalo que recibí en todo el 2019. -Dvento</p>
     </div>
   </div>
 	</div>
