--- a/kimetsu.html
+++ b/kimetsu.html
@@ -14,8 +14,8 @@
  	<link rel="apple-touch-icon" href="./image/icon_512.png">
  	<link rel="apple-touch-startup-image" href="./image/logomarce.png">
 	<link rel="stylesheet" type="text/css" href="materialize.css">
-	<!-- <link rel="manifest" href="manifest.json">
- -->	<title>Kimetsu No Yaiba</title>
+	<link rel="manifest" href="manifest.json">
+	<title>Kimetsu No Yaiba</title>
 </head>
 <body>
 		<!-- <h1 class="text-center">Cecilia Rojas</h1> -->
