--- a/kimetsu.html
+++ b/kimetsu.html
@@ -33,7 +33,8 @@
 
   <ul class="sidenav" id="mobile-demo">
     <li><a href="index.html">Home</a></li>
-    <li><a href="kimetsu.html">Kimetsu no Yaiba</a></li>
+    <!-- <li><a href="kimetsu.html">Kimetsu no Yaiba</a></li> -->
+    <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
   </ul>
   <!-- fin del navbar -->
 	<iframe style="width: 100vw; height: 100vh;" src="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba"></iframe>
