--- a/index.html
+++ b/index.html
@@ -26,89 +26,37 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="kimetsu.html" class="black-text">Kimetsu no Yaiba</a></li>
+        <li><a href="galeria.html">Galeria</a></li>
+        <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba" class="black-text">Kimetsu no Yaiba</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
     <li><a href="index.html">Home</a></li>
-    <!-- <li><a href="kimetsu.html">Kimetsu no Yaiba</a></li> -->
+    <li><a href="galeria.html">Galeria</a></li>
     <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
   </ul>
   <!-- fin del navbar -->
-<!-- <div class="row">
-	<div class="col-sm">
-		<img src="image/erizo.jpg" class="img-fluid">
-	</div>
-</div><br>
-		<div class=" row">
-			<div class="col-sm">
-				<div class="card">
-				  <img src="image/5.jpg" style="" class="card-img-top" alt="Cecilia Tokio Ramen">
-				  <div class="card-body">
-				    <p class="card-text">Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
-				  </div>
-				</div>
-			</div>
-		</div><br>
-		 
-	</div> -->
-	<div class="row">
-	<div class="col s10 offset-s1">
-		<div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="image/erizo.jpg" style="">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Erizo<i class="material-icons right">more_vert</i></span>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Erizo<i class="material-icons right">close</i></span>
-      <p>Uno de roedores que tanto te gusta.</p>
-    </div>
+<!-- inicio carosul -->
+<div class="carousel">
+  <a class="carousel-item" href="#one!"><img src="image/erizo.jpg"></a>
+    <a class="carousel-item" href="#one!"><img src="image/8.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="image/11.jpg"></a>
+    <a class="carousel-item" href="#three!"><img src="image/13.jpg"></a>
+    <a class="carousel-item" href="#four!"><img src="image/5.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="image/14.jpg"></a>
   </div>
-	</div>
-</div>	
-<div class="row">
-	<div class="col s10 offset-s1">
-		<div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="image/5.jpg" style="">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Tokio Ramen<i class="material-icons right">more_vert</i></span>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Tokio Ramen<i class="material-icons right">close</i></span>
-      <p>Ese día fuimos a cenar sopa Ramen en "Tokio Ramen", además nos quedamos hasta casi las 3 am viendo las películas de IP MAN.</p>
-    </div>
-  </div>
-	</div>
-</div>	
-<div class="row">
-	<div class="col s10 offset-s1">
-		<div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="image/2.jpg" style="">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Sticker<i class="material-icons right">more_vert</i></span>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Sticker<i class="material-icons right">close</i></span>
-      <p>El día 26 de noviembre me invitaste a comer una pizza en "pizza hut" y me regalaste un sticker que lo pegué en mi laptop, muchas gracias, fue el mejor regalo que recibí en todo el 2019. -Dvento</p>
-    </div>
-  </div>
-	</div>
-</div>	
+	<!-- fin carosul -->
+
+
 	<script src="script.js"></script>
 	<script src="jquery-3.4.1.min.js"></script>
 	<script src="materialize.js"></script>
 	<script>
-		$(document).ready(function(){
-		    $('.sidenav').sidenav();
-		});
+		 $(document).ready(function(){
+    $('.carousel').carousel();
+  });
 	</script>
 </body>
 </html>
