--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	<script src="materialize.js"></script>
 	<script>
 		 $(document).ready(function(){
+       $('.sidenav').sidenav();
     $('.carousel').carousel();
   });
 	</script>
