--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
+        <li><a href="galeria.html" class="black-text">Galeria</a></li>
         <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba" class="black-text">Kimetsu no Yaiba</a></li>
       </ul>
     </div>
@@ -35,7 +35,7 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="index.html">Home</a></li>
     <li><a href="galeria.html">Galeria</a></li>
-    <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
+    <li><a href="https://lectortmo.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
   </ul>
   <!-- fin del navbar -->
 <!-- inicio carosul -->
@@ -46,6 +46,8 @@
     <a class="carousel-item" href="#three!"><img src="image/13.jpg"></a>
     <a class="carousel-item" href="#four!"><img src="image/5.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="image/14.jpg"></a>
+    <a class="carousel-item" href="#six!"><img src="image/IMG_20200315_140726.jpg"></a>
+    <a class="carousel-item" href="#seven!"><img src="image/IMG-20200307-WA0002.jpg"></a>
   </div>
 	<!-- fin carosul -->
 
