--- a/galeria.html
+++ b/galeria.html
@@ -26,7 +26,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
+        <li><a href="galeria.html" class="black-text">Galeria</a></li>
         <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba" class="black-text">Kimetsu no Yaiba</a></li>
       </ul>
     </div>
@@ -35,7 +35,7 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="index.html">Home</a></li>
     <li><a href="galeria.html">Galeria</a></li>
-    <li><a href="https://tmofans.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
+    <li><a href="https://lectortmo.com/library/manga/15125/kimetsu-no-yaiba">Kimetsu no Yaiba</a></li>
   </ul>
   <!-- fin del navbar -->
 <!-- <div class="row">
@@ -55,6 +55,54 @@
 		</div><br>
 		 
 	</div> -->
+  <div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/IMG_20200315_140720.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Comida Coreana<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Comida Coreana<i class="material-icons right">close</i></span>
+      <p>Comida Coreana que fuimos a comer en el centro comercial arenales, después fuimos a comer un helado cerca</p>
+    </div>
+  </div>
+  </div>
+</div>  
+  <div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/IMG-20200307-WA0003.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Ten Ren<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Ten Ren<i class="material-icons right">close</i></span>
+      <p>Una mala experiencia en pedir te con limon</p>
+    </div>
+  </div>
+  </div>
+</div>  
+  <div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="image/postre.jpg" style="">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Aguaymanto<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Aguaymanto<i class="material-icons right">close</i></span>
+      <p>Aguaymanto, en la residencial San Felipe, tu con tartaleta de arandano y yo con torta de zanahoria</p>
+    </div>
+  </div>
+  </div>
+</div>  
   <div class="row">
   <div class="col s10 offset-s1">
     <div class="card">
